# skip-my-song

./: .clang-format  .clang-tidy  CMakeLists.txt  LICENSE  README.md  vcpkg.json
.github/workflows/: build.yml  check-formatting.yml
src/: App.cpp  App.hpp  AppContext.hpp  CMakeLists.txt  Rules.hpp  Settings.cpp  Settings.hpp  TwitchPanel.cpp  TwitchPanel.hpp  VoteEvent.cpp  VoteEvent.hpp
src/gsmtc/: GsmtcWorker.cpp  GsmtcWorker.hpp
src/irc/: IrcClient.cpp  IrcClient.hpp  IrcParser.cpp  IrcParser.hpp
tools/: clang-format-all.ps1
